# System_Programming_Practice

./: .gitignore  README.md
Database interaction/Mybatis-Spring/: pom.xml
Database interaction/homework4-kit/: Makefile  exerciser.cpp  files_reader.cpp  main.cpp  output.txt  query_funcs.cpp  soutput.txt  test
Database interaction/homework4-kit copy/: exerciser.cpp  files_reader.h  main.cpp  query_funcs.cpp  query_funcs.h
Database interaction/mybatis version/SpringBoot-PostgreSQL-Mybatis-master/: pom.xml
Database interaction/mybatis version/springboot-ecommerce/: pom.xml
Database interaction/mybatis version/untitled5/: pom.xml
Malloc Library/testCases/: my_malloc.c  test.c
Malloc Library/test_kit/: my_malloc.h
Malloc Library/test_kit/alloc_policy_tests/: small_range_rand_allocs.c
Malloc_Library/testCases/: CMakeLists.txt  equal.c  large.c  my_malloc.h  small.c
Malloc_Library/test_kit/: HW1_KIT_README  my_malloc.c  my_malloc.h
TCP-Socket Hot Potato/: CMakeLists.txt  Makefile.txt  client.c  csapp.c  csapp.h  message_wrapper.h  player.c  potato.h  ringmaster.c  server.c  socketOP.h  socket_client.c  socket_client.h  socket_select_server.c  socket_select_server.h  socket_server.c  socket_server.h  socket_simple_server.c  test.sh
TCP-Socket_Hot_Potato/: CMakeLists.txt  Makefile  message_wrapper.h  player  player.c  potato.h  ringmaster  ringmaster.c  socket_client.h  socket_select_server.h  test.sh
ThreadSafe Malloc/test_kit/: HW2_KIT_README  my_malloc.c  my_malloc.h
rootkit/: Makefile  sneaky_mod.c  sneaky_process.c
(+134 files in other folders)
